TP2/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> Programa
Rule 1     Programa -> Inicio Corpo Fim
Rule 2     Corpo -> Declaracoes Instrucoes
Rule 3     Declaracoes -> Declaracoes Declaracao
Rule 4     Declaracoes -> <empty>
Rule 5     Declaracao -> Tipo Var PontoVirgula
Rule 6     Declaracao -> Tipo Var Expressao ParRetoDir PontoVirgula
Rule 7     Declaracao -> Tipo Var ParRetoEsq Expressao ParRetoDir ParRetoEsq Expressao ParRetoDir PontoVirgula
Rule 8     Instrucoes -> Instrucoes Instrucao
Rule 9     Instrucoes -> <empty>
Rule 10    Instrucao -> Atribuicao
Rule 11    Instrucao -> Leitura
Rule 12    Instrucao -> Escrita
Rule 13    Instrucao -> Selecao
Rule 14    Instrucao -> Repeticao
Rule 15    Atribuicao -> Var Vale Expressao PontoVirgula
Rule 16    Atribuicao -> Var ParRetoEsq Expressao ParRetoDir Vale Expressao PontoVirgula
Rule 17    Atribuicao -> Var ParRetoEsq Expressao ParRetoDir ParRetoEsq Expressao ParRetoDir Vale Expressao PontoVirgula
Rule 18    Condicao -> Expressao
Rule 19    Condicao -> Expressao Igual Expressao
Rule 20    Condicao -> Expressao Diferente Expressao
Rule 21    Condicao -> Expressao MenorIgual Expressao
Rule 22    Condicao -> Expressao MaiorIgual Expressao
Rule 23    Condicao -> Expressao Menor Expressao
Rule 24    Condicao -> Expressao Maior Expressao
Rule 25    Expressao -> Termo
Rule 26    Expressao -> Expressao Soma Termo
Rule 27    Expressao -> Expressao Subtracao Termo
Rule 28    Expressao -> Expressao OU Termo
Rule 29    Termo -> Fator
Rule 30    Termo -> Termo Multiplicacao Fator
Rule 31    Termo -> Termo Divisao Fator
Rule 32    Termo -> Termo E Fator
Rule 33    Fator -> Frase
Rule 34    Fator -> Var ParRetoEsq Expressao ParRetoDir
Rule 35    Fator -> Var ParRetoEsq Expressao ParRetoDir ParRetoEsq Expressao ParRetoDir
Rule 36    Fator -> ParCurvoEsq Condicao ParCurvoDir
Rule 37    Fator -> Negar Fator
Rule 38    Leitura -> Ler PontoVirgula
Rule 39    Escrita -> Escrever ParCurvoEsq Expressao ParCurvoDir PontoVirgula
Rule 40    Selecao -> Se ParCurvoEsq Condicao ParCurvoDir Faz Instrucoes PontoVirgula
Rule 41    Selecao -> Se ParCurvoEsq Condicao ParCurvoDir Faz Instrucoes Senao Instrucoes PontoVirgula
Rule 42    Repeticao -> Enquanto ParCurvoEsq Condicao ParCurvoDir Faz Instrucoes PontoVirgula
Rule 43    Repeticao -> Para ParCurvoEsq Atribuicao PontoVirgula Condicao PontoVirgula Atribuicao ParCurvoDir Faz Instrucoes PontoVirgula
Rule 44    Frase -> String
Rule 45    Frase -> Lista_Palavras
Rule 46    Lista_Palavras -> Palavra
Rule 47    Lista_Palavras -> Lista_Palavras Palavra
Rule 48    Palavra -> Var
Rule 49    Palavra -> Num

Terminals, with rules where they appear

Diferente            : 20
Divisao              : 31
E                    : 32
Enquanto             : 42
Escrever             : 39
Faz                  : 40 41 42 43
Fim                  : 1
Igual                : 19
Inicio               : 1
Ler                  : 38
Maior                : 24
MaiorIgual           : 22
Menor                : 23
MenorIgual           : 21
Multiplicacao        : 30
Negar                : 37
Num                  : 49
OU                   : 28
ParCurvoDir          : 36 39 40 41 42 43
ParCurvoEsq          : 36 39 40 41 42 43
ParRetoDir           : 6 7 7 16 17 17 34 35 35
ParRetoEsq           : 7 7 16 17 17 34 35 35
Para                 : 43
PontoVirgula         : 5 6 7 15 16 17 38 39 40 41 42 43 43 43
Se                   : 40 41
Senao                : 41
Soma                 : 26
String               : 44
Subtracao            : 27
Tipo                 : 5 6 7
Vale                 : 15 16 17
Var                  : 5 6 7 15 16 17 34 35 48
error                : 

Nonterminals, with rules where they appear

Atribuicao           : 10 43 43
Condicao             : 36 40 41 42 43
Corpo                : 1
Declaracao           : 3
Declaracoes          : 2 3
Escrita              : 12
Expressao            : 6 7 7 15 16 16 17 17 17 18 19 19 20 20 21 21 22 22 23 23 24 24 26 27 28 34 35 35 39
Fator                : 29 30 31 32 37
Frase                : 33
Instrucao            : 8
Instrucoes           : 2 8 40 41 41 42 43
Leitura              : 11
Lista_Palavras       : 45 47
Palavra              : 46 47
Programa             : 0
Repeticao            : 14
Selecao              : 13
Termo                : 25 26 27 28 30 31 32

Parsing method: LALR

state 0

    (0) S' -> . Programa
    (1) Programa -> . Inicio Corpo Fim

    Inicio          shift and go to state 2

    Programa                       shift and go to state 1

state 1

    (0) S' -> Programa .



state 2

    (1) Programa -> Inicio . Corpo Fim
    (2) Corpo -> . Declaracoes Instrucoes
    (3) Declaracoes -> . Declaracoes Declaracao
    (4) Declaracoes -> .

    Tipo            reduce using rule 4 (Declaracoes -> .)
    Var             reduce using rule 4 (Declaracoes -> .)
    Ler             reduce using rule 4 (Declaracoes -> .)
    Escrever        reduce using rule 4 (Declaracoes -> .)
    Se              reduce using rule 4 (Declaracoes -> .)
    Enquanto        reduce using rule 4 (Declaracoes -> .)
    Para            reduce using rule 4 (Declaracoes -> .)
    Fim             reduce using rule 4 (Declaracoes -> .)

    Corpo                          shift and go to state 3
    Declaracoes                    shift and go to state 4

state 3

    (1) Programa -> Inicio Corpo . Fim

    Fim             shift and go to state 5


state 4

    (2) Corpo -> Declaracoes . Instrucoes
    (3) Declaracoes -> Declaracoes . Declaracao
    (8) Instrucoes -> . Instrucoes Instrucao
    (9) Instrucoes -> .
    (5) Declaracao -> . Tipo Var PontoVirgula
    (6) Declaracao -> . Tipo Var Expressao ParRetoDir PontoVirgula
    (7) Declaracao -> . Tipo Var ParRetoEsq Expressao ParRetoDir ParRetoEsq Expressao ParRetoDir PontoVirgula

    Var             reduce using rule 9 (Instrucoes -> .)
    Ler             reduce using rule 9 (Instrucoes -> .)
    Escrever        reduce using rule 9 (Instrucoes -> .)
    Se              reduce using rule 9 (Instrucoes -> .)
    Enquanto        reduce using rule 9 (Instrucoes -> .)
    Para            reduce using rule 9 (Instrucoes -> .)
    Fim             reduce using rule 9 (Instrucoes -> .)
    Tipo            shift and go to state 8

    Instrucoes                     shift and go to state 6
    Declaracao                     shift and go to state 7

state 5

    (1) Programa -> Inicio Corpo Fim .

    $end            reduce using rule 1 (Programa -> Inicio Corpo Fim .)


state 6

    (2) Corpo -> Declaracoes Instrucoes .
    (8) Instrucoes -> Instrucoes . Instrucao
    (10) Instrucao -> . Atribuicao
    (11) Instrucao -> . Leitura
    (12) Instrucao -> . Escrita
    (13) Instrucao -> . Selecao
    (14) Instrucao -> . Repeticao
    (15) Atribuicao -> . Var Vale Expressao PontoVirgula
    (16) Atribuicao -> . Var ParRetoEsq Expressao ParRetoDir Vale Expressao PontoVirgula
    (17) Atribuicao -> . Var ParRetoEsq Expressao ParRetoDir ParRetoEsq Expressao ParRetoDir Vale Expressao PontoVirgula
    (38) Leitura -> . Ler PontoVirgula
    (39) Escrita -> . Escrever ParCurvoEsq Expressao ParCurvoDir PontoVirgula
    (40) Selecao -> . Se ParCurvoEsq Condicao ParCurvoDir Faz Instrucoes PontoVirgula
    (41) Selecao -> . Se ParCurvoEsq Condicao ParCurvoDir Faz Instrucoes Senao Instrucoes PontoVirgula
    (42) Repeticao -> . Enquanto ParCurvoEsq Condicao ParCurvoDir Faz Instrucoes PontoVirgula
    (43) Repeticao -> . Para ParCurvoEsq Atribuicao PontoVirgula Condicao PontoVirgula Atribuicao ParCurvoDir Faz Instrucoes PontoVirgula

    Fim             reduce using rule 2 (Corpo -> Declaracoes Instrucoes .)
    Var             shift and go to state 15
    Ler             shift and go to state 16
    Escrever        shift and go to state 17
    Se              shift and go to state 18
    Enquanto        shift and go to state 19
    Para            shift and go to state 20

    Instrucao                      shift and go to state 9
    Atribuicao                     shift and go to state 10
    Leitura                        shift and go to state 11
    Escrita                        shift and go to state 12
    Selecao                        shift and go to state 13
    Repeticao                      shift and go to state 14

state 7

    (3) Declaracoes -> Declaracoes Declaracao .

    Tipo            reduce using rule 3 (Declaracoes -> Declaracoes Declaracao .)
    Var             reduce using rule 3 (Declaracoes -> Declaracoes Declaracao .)
    Ler             reduce using rule 3 (Declaracoes -> Declaracoes Declaracao .)
    Escrever        reduce using rule 3 (Declaracoes -> Declaracoes Declaracao .)
    Se              reduce using rule 3 (Declaracoes -> Declaracoes Declaracao .)
    Enquanto        reduce using rule 3 (Declaracoes -> Declaracoes Declaracao .)
    Para            reduce using rule 3 (Declaracoes -> Declaracoes Declaracao .)
    Fim             reduce using rule 3 (Declaracoes -> Declaracoes Declaracao .)


state 8

    (5) Declaracao -> Tipo . Var PontoVirgula
    (6) Declaracao -> Tipo . Var Expressao ParRetoDir PontoVirgula
    (7) Declaracao -> Tipo . Var ParRetoEsq Expressao ParRetoDir ParRetoEsq Expressao ParRetoDir PontoVirgula

    Var             shift and go to state 21


state 9

    (8) Instrucoes -> Instrucoes Instrucao .

    Var             reduce using rule 8 (Instrucoes -> Instrucoes Instrucao .)
    Ler             reduce using rule 8 (Instrucoes -> Instrucoes Instrucao .)
    Escrever        reduce using rule 8 (Instrucoes -> Instrucoes Instrucao .)
    Se              reduce using rule 8 (Instrucoes -> Instrucoes Instrucao .)
    Enquanto        reduce using rule 8 (Instrucoes -> Instrucoes Instrucao .)
    Para            reduce using rule 8 (Instrucoes -> Instrucoes Instrucao .)
    Fim             reduce using rule 8 (Instrucoes -> Instrucoes Instrucao .)
    PontoVirgula    reduce using rule 8 (Instrucoes -> Instrucoes Instrucao .)
    Senao           reduce using rule 8 (Instrucoes -> Instrucoes Instrucao .)


state 10

    (10) Instrucao -> Atribuicao .

    Var             reduce using rule 10 (Instrucao -> Atribuicao .)
    Ler             reduce using rule 10 (Instrucao -> Atribuicao .)
    Escrever        reduce using rule 10 (Instrucao -> Atribuicao .)
    Se              reduce using rule 10 (Instrucao -> Atribuicao .)
    Enquanto        reduce using rule 10 (Instrucao -> Atribuicao .)
    Para            reduce using rule 10 (Instrucao -> Atribuicao .)
    Fim             reduce using rule 10 (Instrucao -> Atribuicao .)
    PontoVirgula    reduce using rule 10 (Instrucao -> Atribuicao .)
    Senao           reduce using rule 10 (Instrucao -> Atribuicao .)


state 11

    (11) Instrucao -> Leitura .

    Var             reduce using rule 11 (Instrucao -> Leitura .)
    Ler             reduce using rule 11 (Instrucao -> Leitura .)
    Escrever        reduce using rule 11 (Instrucao -> Leitura .)
    Se              reduce using rule 11 (Instrucao -> Leitura .)
    Enquanto        reduce using rule 11 (Instrucao -> Leitura .)
    Para            reduce using rule 11 (Instrucao -> Leitura .)
    Fim             reduce using rule 11 (Instrucao -> Leitura .)
    PontoVirgula    reduce using rule 11 (Instrucao -> Leitura .)
    Senao           reduce using rule 11 (Instrucao -> Leitura .)


state 12

    (12) Instrucao -> Escrita .

    Var             reduce using rule 12 (Instrucao -> Escrita .)
    Ler             reduce using rule 12 (Instrucao -> Escrita .)
    Escrever        reduce using rule 12 (Instrucao -> Escrita .)
    Se              reduce using rule 12 (Instrucao -> Escrita .)
    Enquanto        reduce using rule 12 (Instrucao -> Escrita .)
    Para            reduce using rule 12 (Instrucao -> Escrita .)
    Fim             reduce using rule 12 (Instrucao -> Escrita .)
    PontoVirgula    reduce using rule 12 (Instrucao -> Escrita .)
    Senao           reduce using rule 12 (Instrucao -> Escrita .)


state 13

    (13) Instrucao -> Selecao .

    Var             reduce using rule 13 (Instrucao -> Selecao .)
    Ler             reduce using rule 13 (Instrucao -> Selecao .)
    Escrever        reduce using rule 13 (Instrucao -> Selecao .)
    Se              reduce using rule 13 (Instrucao -> Selecao .)
    Enquanto        reduce using rule 13 (Instrucao -> Selecao .)
    Para            reduce using rule 13 (Instrucao -> Selecao .)
    Fim             reduce using rule 13 (Instrucao -> Selecao .)
    PontoVirgula    reduce using rule 13 (Instrucao -> Selecao .)
    Senao           reduce using rule 13 (Instrucao -> Selecao .)


state 14

    (14) Instrucao -> Repeticao .

    Var             reduce using rule 14 (Instrucao -> Repeticao .)
    Ler             reduce using rule 14 (Instrucao -> Repeticao .)
    Escrever        reduce using rule 14 (Instrucao -> Repeticao .)
    Se              reduce using rule 14 (Instrucao -> Repeticao .)
    Enquanto        reduce using rule 14 (Instrucao -> Repeticao .)
    Para            reduce using rule 14 (Instrucao -> Repeticao .)
    Fim             reduce using rule 14 (Instrucao -> Repeticao .)
    PontoVirgula    reduce using rule 14 (Instrucao -> Repeticao .)
    Senao           reduce using rule 14 (Instrucao -> Repeticao .)


state 15

    (15) Atribuicao -> Var . Vale Expressao PontoVirgula
    (16) Atribuicao -> Var . ParRetoEsq Expressao ParRetoDir Vale Expressao PontoVirgula
    (17) Atribuicao -> Var . ParRetoEsq Expressao ParRetoDir ParRetoEsq Expressao ParRetoDir Vale Expressao PontoVirgula

    Vale            shift and go to state 22
    ParRetoEsq      shift and go to state 23


state 16

    (38) Leitura -> Ler . PontoVirgula

    PontoVirgula    shift and go to state 24


state 17

    (39) Escrita -> Escrever . ParCurvoEsq Expressao ParCurvoDir PontoVirgula

    ParCurvoEsq     shift and go to state 25


state 18

    (40) Selecao -> Se . ParCurvoEsq Condicao ParCurvoDir Faz Instrucoes PontoVirgula
    (41) Selecao -> Se . ParCurvoEsq Condicao ParCurvoDir Faz Instrucoes Senao Instrucoes PontoVirgula

    ParCurvoEsq     shift and go to state 26


state 19

    (42) Repeticao -> Enquanto . ParCurvoEsq Condicao ParCurvoDir Faz Instrucoes PontoVirgula

    ParCurvoEsq     shift and go to state 27


state 20

    (43) Repeticao -> Para . ParCurvoEsq Atribuicao PontoVirgula Condicao PontoVirgula Atribuicao ParCurvoDir Faz Instrucoes PontoVirgula

    ParCurvoEsq     shift and go to state 28


state 21

    (5) Declaracao -> Tipo Var . PontoVirgula
    (6) Declaracao -> Tipo Var . Expressao ParRetoDir PontoVirgula
    (7) Declaracao -> Tipo Var . ParRetoEsq Expressao ParRetoDir ParRetoEsq Expressao ParRetoDir PontoVirgula
    (25) Expressao -> . Termo
    (26) Expressao -> . Expressao Soma Termo
    (27) Expressao -> . Expressao Subtracao Termo
    (28) Expressao -> . Expressao OU Termo
    (29) Termo -> . Fator
    (30) Termo -> . Termo Multiplicacao Fator
    (31) Termo -> . Termo Divisao Fator
    (32) Termo -> . Termo E Fator
    (33) Fator -> . Frase
    (34) Fator -> . Var ParRetoEsq Expressao ParRetoDir
    (35) Fator -> . Var ParRetoEsq Expressao ParRetoDir ParRetoEsq Expressao ParRetoDir
    (36) Fator -> . ParCurvoEsq Condicao ParCurvoDir
    (37) Fator -> . Negar Fator
    (44) Frase -> . String
    (45) Frase -> . Lista_Palavras
    (46) Lista_Palavras -> . Palavra
    (47) Lista_Palavras -> . Lista_Palavras Palavra
    (48) Palavra -> . Var
    (49) Palavra -> . Num

    PontoVirgula    shift and go to state 30
    ParRetoEsq      shift and go to state 32
    Var             shift and go to state 29
    ParCurvoEsq     shift and go to state 36
    Negar           shift and go to state 37
    String          shift and go to state 38
    Num             shift and go to state 41

    Expressao                      shift and go to state 31
    Termo                          shift and go to state 33
    Fator                          shift and go to state 34
    Frase                          shift and go to state 35
    Lista_Palavras                 shift and go to state 39
    Palavra                        shift and go to state 40

state 22

    (15) Atribuicao -> Var Vale . Expressao PontoVirgula
    (25) Expressao -> . Termo
    (26) Expressao -> . Expressao Soma Termo
    (27) Expressao -> . Expressao Subtracao Termo
    (28) Expressao -> . Expressao OU Termo
    (29) Termo -> . Fator
    (30) Termo -> . Termo Multiplicacao Fator
    (31) Termo -> . Termo Divisao Fator
    (32) Termo -> . Termo E Fator
    (33) Fator -> . Frase
    (34) Fator -> . Var ParRetoEsq Expressao ParRetoDir
    (35) Fator -> . Var ParRetoEsq Expressao ParRetoDir ParRetoEsq Expressao ParRetoDir
    (36) Fator -> . ParCurvoEsq Condicao ParCurvoDir
    (37) Fator -> . Negar Fator
    (44) Frase -> . String
    (45) Frase -> . Lista_Palavras
    (46) Lista_Palavras -> . Palavra
    (47) Lista_Palavras -> . Lista_Palavras Palavra
    (48) Palavra -> . Var
    (49) Palavra -> . Num

    Var             shift and go to state 29
    ParCurvoEsq     shift and go to state 36
    Negar           shift and go to state 37
    String          shift and go to state 38
    Num             shift and go to state 41

    Expressao                      shift and go to state 42
    Termo                          shift and go to state 33
    Fator                          shift and go to state 34
    Frase                          shift and go to state 35
    Lista_Palavras                 shift and go to state 39
    Palavra                        shift and go to state 40

state 23

    (16) Atribuicao -> Var ParRetoEsq . Expressao ParRetoDir Vale Expressao PontoVirgula
    (17) Atribuicao -> Var ParRetoEsq . Expressao ParRetoDir ParRetoEsq Expressao ParRetoDir Vale Expressao PontoVirgula
    (25) Expressao -> . Termo
    (26) Expressao -> . Expressao Soma Termo
    (27) Expressao -> . Expressao Subtracao Termo
    (28) Expressao -> . Expressao OU Termo
    (29) Termo -> . Fator
    (30) Termo -> . Termo Multiplicacao Fator
    (31) Termo -> . Termo Divisao Fator
    (32) Termo -> . Termo E Fator
    (33) Fator -> . Frase
    (34) Fator -> . Var ParRetoEsq Expressao ParRetoDir
    (35) Fator -> . Var ParRetoEsq Expressao ParRetoDir ParRetoEsq Expressao ParRetoDir
    (36) Fator -> . ParCurvoEsq Condicao ParCurvoDir
    (37) Fator -> . Negar Fator
    (44) Frase -> . String
    (45) Frase -> . Lista_Palavras
    (46) Lista_Palavras -> . Palavra
    (47) Lista_Palavras -> . Lista_Palavras Palavra
    (48) Palavra -> . Var
    (49) Palavra -> . Num

    Var             shift and go to state 29
    ParCurvoEsq     shift and go to state 36
    Negar           shift and go to state 37
    String          shift and go to state 38
    Num             shift and go to state 41

    Expressao                      shift and go to state 43
    Termo                          shift and go to state 33
    Fator                          shift and go to state 34
    Frase                          shift and go to state 35
    Lista_Palavras                 shift and go to state 39
    Palavra                        shift and go to state 40

state 24

    (38) Leitura -> Ler PontoVirgula .
